force-app/main/default/objects/os_Closing__c/os_Closing__c.object-meta.xml
<CustomObject>
    <label>Closing</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Closing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>