force-app/main/default/objects/os_Closing__c/fields/Balance_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Balance_Sale_Price__c</fullName>
    <formula>Instalment_Amount__c - Outstanding_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>