force-app/main/default/objects/os_Closing__c/fields/Country_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Birth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Of Birth</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>Closings (Country Of Birth)</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>