force-app/main/default/objects/os_Closing__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <formula>TEXT(os_Buyer_Tenant__r.os_gsir_date_of_birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Text</type>
</CustomField>