force-app/main/default/objects/os_Closing__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5.0 % 1st Installment</fullName>
            </value>
            <value>
                <fullName>15.0 % 2nd Installment</fullName>
            </value>
            <value>
                <fullName>10.0 % 3rd Installment</fullName>
            </value>
            <value>
                <fullName>10.0 % 4th Installment</fullName>
            </value>
            <value>
                <fullName>10.0 % 5th Installment</fullName>
            </value>
            <value>
                <fullName>10.0 % 6th Installment</fullName>
            </value>
            <value>
                <fullName>40.0 % 7th Installment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>