force-app/main/default/objects/os_Closing__c/fields/Instalment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Amount__c</fullName>
    <label>Instalment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>