force-app/main/default/objects/os_Closing__c/fields/os_3rd_Party_Agency_Company__c.field-meta.xml
<CustomField>
    <fullName>os_3rd_Party_Agency_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Agency Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>