force-app/main/default/objects/os_Closing__c/fields/os_3rd_Party_Referral_Commision__c.field-meta.xml
<CustomField>
    <fullName>os_3rd_Party_Referral_Commision__c</fullName>
    <formula>os_External_Party_Commission__c /  os_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Referral Commision %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>