force-app/main/default/objects/os_Closing__c/fields/os_Accounted_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Accounted_Date__c</fullName>
    <label>Accounted Date</label>
    <type>Date</type>
</CustomField>