force-app/main/default/objects/os_Closing__c/fields/os_Administration_Approval__c.field-meta.xml
<CustomField>
    <fullName>os_Administration_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Check Approved</label>
    <type>Checkbox</type>
</CustomField>