force-app/main/default/objects/os_Closing__c/fields/os_AML_Check__c.field-meta.xml
<CustomField>
    <fullName>os_AML_Check__c</fullName>
    <label>AML Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>