force-app/main/default/objects/os_Closing__c/fields/os_AML_Completed__c.field-meta.xml
<CustomField>
    <fullName>os_AML_Completed__c</fullName>
    <formula>IF(
AND(
 os_KYC__c = true,
 os_Buyers_Documents__c = true,
 os_Case_report__c = true,
 os_Source_of_Funds__c = true,
 os_Agreement__c = true,
 os_Risk_Rating__c = true
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML Completed</label>
    <type>Checkbox</type>
</CustomField>