force-app/main/default/objects/os_Closing__c/fields/os_AML_KYC_Approved_Count__c.field-meta.xml
<CustomField>
    <fullName>os_AML_KYC_Approved_Count__c</fullName>
    <label>AML KYC Approved Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>