force-app/main/default/objects/os_Closing__c/fields/os_AML_KYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>os_AML_KYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AML / KYC Completed</label>
    <type>Checkbox</type>
</CustomField>