force-app/main/default/objects/os_Closing__c/fields/os_AML_Rating__c.field-meta.xml
<CustomField>
    <fullName>os_AML_Rating__c</fullName>
    <label>AML Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>