force-app/main/default/objects/os_Closing__c/fields/os_Attorney_Contact__c.field-meta.xml
<CustomField>
    <fullName>os_Attorney_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AttorneyContact</relationshipName>
    <type>Lookup</type>
</CustomField>