force-app/main/default/objects/os_Closing__c/fields/os_B2B_Buyers_Gender__c.field-meta.xml
<CustomField>
    <fullName>os_B2B_Buyers_Gender__c</fullName>
    <formula>text(os_Winning_Inquiry__r.os_B2B_Buyers_Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Buyers Gender</label>
    <type>Text</type>
</CustomField>