force-app/main/default/objects/os_Closing__c/fields/os_B2B_Buyers_Name__c.field-meta.xml
<CustomField>
    <fullName>os_B2B_Buyers_Name__c</fullName>
    <formula>os_Winning_Inquiry__r.os_B2B_Buyers_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Buyers Name</label>
    <type>Text</type>
</CustomField>