force-app/main/default/objects/os_Closing__c/fields/os_B2B_Client__c.field-meta.xml
<CustomField>
    <fullName>os_B2B_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>B2BClient</relationshipName>
    <type>Lookup</type>
</CustomField>