force-app/main/default/objects/os_Closing__c/fields/os_Bank_Liability_Letter__c.field-meta.xml
<CustomField>
    <fullName>os_Bank_Liability_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Liability Letter</label>
    <type>Checkbox</type>
</CustomField>