force-app/main/default/objects/os_Closing__c/fields/os_Business_Location__c.field-meta.xml
<CustomField>
    <fullName>os_Business_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Location</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipName>BusinessLocation</relationshipName>
    <type>Lookup</type>
</CustomField>