force-app/main/default/objects/os_Closing__c/fields/os_Buyer_Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_Agency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Agency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>BuyerAgencyContact</relationshipName>
    <type>Lookup</type>
</CustomField>