force-app/main/default/objects/os_Closing__c/fields/os_Buyer_Disclosures_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_Disclosures_Date__c</fullName>
    <label>Buyer Disclosures Date</label>
    <type>Date</type>
</CustomField>