force-app/main/default/objects/os_Closing__c/fields/os_Buyer_Nationality__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_Nationality__c</fullName>
    <formula>TEXT( os_Buyer_Tenant__r.os_Nationality__c
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Nationality</label>
    <type>Text</type>
</CustomField>