force-app/main/default/objects/os_Closing__c/fields/os_Buyer_s_Age__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_s_Age__c</fullName>
    <formula>TEXT(  os_Buyer_Tenant__r.os_Age__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer&apos;s Age</label>
    <type>Text</type>
</CustomField>