force-app/main/default/objects/os_Closing__c/fields/os_Buyer_s_Gender__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_s_Gender__c</fullName>
    <formula>TEXT( os_Buyer_Tenant__r.os_Gender__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer&apos;s Gender</label>
    <type>Text</type>
</CustomField>