force-app/main/default/objects/os_Closing__c/fields/os_Buyer_Side_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_Side_Split_Amount__c</fullName>
    <formula>os_Sale_Price__c *  os_Buyer_Agent_Split_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Side Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>