force-app/main/default/objects/os_Closing__c/fields/os_Buyer_Tenant__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Buyer</relationshipName>
    <type>Lookup</type>
</CustomField>