force-app/main/default/objects/os_Closing__c/fields/os_Buyers_Documents__c.field-meta.xml
<CustomField>
    <fullName>os_Buyers_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyers Documents�</label>
    <type>Checkbox</type>
</CustomField>