force-app/main/default/objects/os_Closing__c/fields/os_Case_report__c.field-meta.xml
<CustomField>
    <fullName>os_Case_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case report</label>
    <type>Checkbox</type>
</CustomField>