force-app/main/default/objects/os_Closing__c/fields/os_Case_with_AML_Consultants__c.field-meta.xml
<CustomField>
    <fullName>os_Case_with_AML_Consultants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case with AML Consultants</label>
    <type>Checkbox</type>
</CustomField>