force-app/main/default/objects/os_Closing__c/fields/os_Cheque_Released_by_Finance__c.field-meta.xml
<CustomField>
    <fullName>os_Cheque_Released_by_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Released by Finance</label>
    <type>Checkbox</type>
</CustomField>