force-app/main/default/objects/os_Closing__c/fields/os_Client_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>os_Client_Lead_Source__c</fullName>
    <formula>TEXT( os_Buyer_Tenant__r.LeadSource )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Lead Source</label>
    <type>Text</type>
</CustomField>