force-app/main/default/objects/os_Closing__c/fields/os_Closing_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing 18 Digit Id</label>
    <type>Text</type>
</CustomField>