force-app/main/default/objects/os_Closing__c/fields/os_Closing_Brokers_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_Brokers_USER_ID__c</fullName>
    <formula>os_gsir_closing_broker__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Brokers USER ID</label>
    <type>Text</type>
</CustomField>