force-app/main/default/objects/os_Closing__c/fields/os_Closing_Country__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_Country__c</fullName>
    <label>Closing Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>