force-app/main/default/objects/os_Closing__c/fields/os_Closing_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing ID</label>
    <type>Text</type>
</CustomField>