force-app/main/default/objects/os_Closing__c/fields/os_Closing_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_Name__c</fullName>
    <formula>IF( ISBLANK( os_Buyer_Tenant__r.FirstName ) , os_Renter__r.FirstName , os_Buyer_Tenant__r.FirstName)&amp;&quot; &quot;&amp; IF( ISBLANK( os_Buyer_Tenant__r.LastName ) , os_Renter__r.LastName , os_Buyer_Tenant__r.LastName )&amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp; os_Listing__r.os_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Name</label>
    <type>Text</type>
</CustomField>