force-app/main/default/objects/os_Closing__c/fields/os_Closing_Price_GBP__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_Price_GBP__c</fullName>
    <label>Closing Price GBP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>