force-app/main/default/objects/os_Closing__c/fields/os_Closing_Probability__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_Probability__c</fullName>
    <label>Closing Probability %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>