force-app/main/default/objects/os_Closing__c/fields/os_Closing_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_Status__c</fullName>
    <label>Closing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Contract Approval</fullName>
            </value>
            <value>
                <fullName>In Transfer</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>