force-app/main/default/objects/os_Closing__c/fields/os_Closing_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Closing_Transaction_Type__c</fullName>
    <formula>os_Listing__r.os_Transaction_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Transaction Type</label>
    <type>Text</type>
</CustomField>