force-app/main/default/objects/os_Closing__c/fields/os_ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>os_ClosingDate__c</fullName>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>