force-app/main/default/objects/os_Closing__c/fields/os_ClosingPropertyAddress__c.field-meta.xml
<CustomField>
    <fullName>os_ClosingPropertyAddress__c</fullName>
    <label>Listing Property Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>