force-app/main/default/objects/os_Closing__c/fields/os_Company_Buyer_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Company_Buyer_Split_Amount__c</fullName>
    <formula>os_Buyer_Side_Split_Amount__c *  os_Company_Buyer_Split_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Buyer Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>