force-app/main/default/objects/os_Closing__c/fields/os_Company_Buyer_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>os_Company_Buyer_Split_Percent__c</fullName>
    <label>Company Buyer Split %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>