force-app/main/default/objects/os_Closing__c/fields/os_Company_Commision__c.field-meta.xml
<CustomField>
    <fullName>os_Company_Commision__c</fullName>
    <formula>os_Total_Commission_Amount__c / os_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Commision %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>