force-app/main/default/objects/os_Closing__c/fields/os_Contact_Details_Not_Verified__c.field-meta.xml
<CustomField>
    <fullName>os_Contact_Details_Not_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Details Not Verified</label>
    <type>Checkbox</type>
</CustomField>