force-app/main/default/objects/os_Closing__c/fields/os_ContactDetailsVerification_In_Process__c.field-meta.xml
<CustomField>
    <fullName>os_ContactDetailsVerification_In_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Details Verification In Process</label>
    <type>Checkbox</type>
</CustomField>