force-app/main/default/objects/os_Closing__c/fields/os_Contract_Generating_User__c.field-meta.xml
<CustomField>
    <fullName>os_Contract_Generating_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Generating User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractGeneratingUser</relationshipName>
    <type>Lookup</type>
</CustomField>