force-app/main/default/objects/os_Closing__c/fields/os_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>os_Contract_Value__c</fullName>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>