force-app/main/default/objects/os_Closing__c/fields/os_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>os_Conveyance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>