force-app/main/default/objects/os_Closing__c/fields/os_Conveyancing_Manager__c.field-meta.xml
<CustomField>
    <fullName>os_Conveyancing_Manager__c</fullName>
    <label>Conveyancing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lisha Hinalao</fullName>
            </value>
            <value>
                <fullName>Sarah Ebadian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>