force-app/main/default/objects/os_Closing__c/fields/os_Country_Of_Residence__c.field-meta.xml
<CustomField>
    <fullName>os_Country_Of_Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Of Residence</label>
    <referenceTo>os_AML_Parameter__c</referenceTo>
    <relationshipLabel>Closings (Country Of Residence)</relationshipLabel>
    <relationshipName>Closings1</relationshipName>
    <type>Lookup</type>
</CustomField>