force-app/main/default/objects/os_Closing__c/fields/os_Credit_Check_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Credit_Check_Approval_Date__c</fullName>
    <label>Credit Check Approval Date</label>
    <type>Date</type>
</CustomField>