force-app/main/default/objects/os_Closing__c/fields/os_Credit_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>os_Credit_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check Complete</label>
    <type>Checkbox</type>
</CustomField>