force-app/main/default/objects/os_Closing__c/fields/os_Current_Age__c.field-meta.xml
<CustomField>
    <fullName>os_Current_Age__c</fullName>
    <formula>( TODAY() -  os_Date_of_Birth__c )/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>