force-app/main/default/objects/os_Closing__c/fields/os_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>os_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>