force-app/main/default/objects/os_Closing__c/fields/os_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance to Finance</fullName>
            </value>
            <value>
                <fullName>Finance to Cash</fullName>
            </value>
            <value>
                <fullName>cash to Finance</fullName>
            </value>
            <value>
                <fullName>Cash to Cash</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Company Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>