force-app/main/default/objects/os_Closing__c/fields/os_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Deposit_Amount__c</fullName>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>