force-app/main/default/objects/os_Closing__c/fields/os_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Deposit_Date__c</fullName>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>