force-app/main/default/objects/os_Closing__c/fields/os_Deposit_Money__c.field-meta.xml
<CustomField>
    <fullName>os_Deposit_Money__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Money</label>
    <type>Checkbox</type>
</CustomField>