force-app/main/default/objects/os_Closing__c/fields/os_Deposit_Money_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Deposit_Money_Amount__c</fullName>
    <label>Deposit Money Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>