force-app/main/default/objects/os_Closing__c/fields/os_Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>os_Deposit_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Received</label>
    <type>Checkbox</type>
</CustomField>