force-app/main/default/objects/os_Closing__c/fields/os_Development_Projects_Outcome__c.field-meta.xml
<CustomField>
    <fullName>os_Development_Projects_Outcome__c</fullName>
    <label>Development Projects Outcome(OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Agent Briefing</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>SPA issued</fullName>
            </value>
            <value>
                <fullName>5% Received</fullName>
            </value>
            <value>
                <fullName>20% Received</fullName>
            </value>
            <value>
                <fullName>100% Received</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Signatures on SPA pending with Developer</fullName>
            </value>
            <value>
                <fullName>SPA issuance pending with Developer</fullName>
            </value>
            <value>
                <fullName>SPA signatures pending with client</fullName>
            </value>
            <value>
                <fullName>Oqood Registered</fullName>
            </value>
            <value>
                <fullName>SPA Submitted to Developer</fullName>
            </value>
            <value>
                <fullName>Fully Executed SPA ( signed by both Party )</fullName>
            </value>
            <value>
                <fullName>Executed SPA sent to client</fullName>
            </value>
            <value>
                <fullName>Oqood Registered and Executed SPA sent to client</fullName>
            </value>
            <value>
                <fullName>Title deed issued by Developer</fullName>
            </value>
            <value>
                <fullName>Title deed not issued by Developer</fullName>
            </value>
            <value>
                <fullName>Developers Compliance Approved</fullName>
            </value>
            <value>
                <fullName>Reservation signed by buyer</fullName>
            </value>
            <value>
                <fullName>Reservation signed by buyer and down payment received</fullName>
            </value>
            <value>
                <fullName>Form F signed by buyer &amp; seller</fullName>
            </value>
            <value>
                <fullName>Developer NOC pending</fullName>
            </value>
            <value>
                <fullName>Transfer date confirmed</fullName>
            </value>
            <value>
                <fullName>Transfer done</fullName>
            </value>
            <value>
                <fullName>SPA Signed by Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>